# nas_pstl

./: .gitignore  CMakeLists.txt  README.md  action.yml
.github/workflows/: build_make.yml  ccpp.yml  docker_build.yml  dockerimage.yml
CG/: CMakeLists.txt  cg.cpp
Docker/: Ubuntu.Dockerfile  arch.Dockerfile  build_container.sh
Docker/Arch/: Dockerfile
Docker/Ubuntu/: Dockerfile
EP/: ep.cpp
FT/: ft.cpp
IS/: is.cpp
MG/: mg.cpp
config/: make.def
docs/: setup_arch.md  setup_ubuntu.md  tbb_manual_setup.md
